--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "element-ui": "^2.15.6",
+    "uuid": "^8.3.2",
+    "vue": "^2.6.11",
+    "zdog": "^1.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
